--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -326,53 +326,148 @@ B- & 80.0--81.9  & D- & 60.0--61.9 \\
 Contact me via email or Canvas with detailed questions about grades. Include the assignment in question and allow up to 48 hours for response. No extra credit opportunities are available.
 
 \section{Course Schedule}
-
-\subsection{Week 1: Topic Name (Dates)}
+\subsection{Week 1: Course Introduction \& Syllabus Overview (Dates)}
 \textbf{Module Information}
 \begin{itemize}
-\item Learning activity 1
-\item Learning activity 2
-\item \textbf{Discussion:} Discussion topic
-\item \textbf{Assignment:} Assignment due
+\item Review syllabus and course policies
+\item Introductions and icebreaker activity
+\item \textbf{Discussion:} Introduce yourself
+\item \textbf{Assignment:} Syllabus quiz due
 \end{itemize}
 
-\subsection{Week 2: Topic Name (Dates)}
+\subsection{Week 2: Topic 1 -- Foundations (Dates)}
 \textbf{Module Information}
 \begin{itemize}
-\item Learning activity 1
-\item Learning activity 2
-\item \textbf{Discussion:} Discussion topic
-\item \textbf{Assignment:} Assignment due
+\item Read Chapter 1
+\item Lecture: Key concepts and terminology
+\item \textbf{Discussion:} Reflect on foundational ideas
+\item \textbf{Assignment:} Short response due
 \end{itemize}
 
-\subsection{Week 3: Topic Name (Dates)}
+\subsection{Week 3: Topic 2 -- Core Concepts (Dates)}
 \textbf{Module Information}
 \begin{itemize}
-\item Learning activity 1
-\item Learning activity 2
-\item \textbf{Discussion:} Discussion topic
-\item \textbf{Assignment:} Assignment due
+\item Read Chapter 2
+\item Activity: Case study analysis
+\item \textbf{Discussion:} Case study discussion
+\item \textbf{Assignment:} Case study write-up due
 \end{itemize}
 
-\subsection{Week 4: Topic Name (Dates)}
+\subsection{Week 4: Topic 3 -- Applications (Dates)}
 \textbf{Module Information}
 \begin{itemize}
-\item Learning activity 1
-\item Learning activity 2
-\item \textbf{Discussion:} Discussion topic
-\item \textbf{Assignment:} Assignment due
+\item Read Chapter 3
+\item Group activity: Application scenarios
+\item \textbf{Discussion:} Group findings
+\item \textbf{Assignment:} Application worksheet due
 \end{itemize}
 
-\subsection{Week 5: Topic Name (Dates)}
+\subsection{Week 5: Topic 4 -- Research Methods (Dates)}
 \textbf{Module Information}
 \begin{itemize}
-\item Learning activity 1
-\item Learning activity 2
-\item \textbf{Discussion:} Discussion topic
-\item \textbf{Assignment:} Assignment due
+\item Read Chapter 4
+\item Lecture: Research design
+\item \textbf{Discussion:} Evaluating research
+\item \textbf{Assignment:} Research critique due
 \end{itemize}
 
-% Continue this pattern for all weeks of the course, adjusting topics and assignments as necessary.
+\subsection{Week 6: Topic 5 -- Data Analysis (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Read Chapter 5
+\item Activity: Data interpretation
+\item \textbf{Discussion:} Data challenges
+\item \textbf{Assignment:} Data analysis exercise due
+\end{itemize}
+
+\subsection{Week 7: Topic 6 -- Ethics and Professionalism (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Read Chapter 6
+\item Lecture: Ethical dilemmas
+\item \textbf{Discussion:} Ethics in practice
+\item \textbf{Assignment:} Ethics reflection due
+\end{itemize}
+
+\subsection{Week 8: Midterm Review \& Assessment (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Review sessions and Q\&A
+\item \textbf{Discussion:} Midterm preparation
+\item \textbf{Assignment:} Midterm exam due
+\end{itemize}
+
+\subsection{Week 9: Topic 7 -- Diversity and Inclusion (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Read Chapter 7
+\item Activity: Inclusive practices
+\item \textbf{Discussion:} Diversity in the field
+\item \textbf{Assignment:} Inclusion project due
+\end{itemize}
+
+\subsection{Week 10: Topic 8 -- Technology and Society (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Read Chapter 8
+\item Lecture: Technology impacts
+\item \textbf{Discussion:} Technology debate
+\item \textbf{Assignment:} Technology analysis due
+\end{itemize}
+
+\subsection{Week 11: Topic 9 -- Policy and Regulation (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Read Chapter 9
+\item Activity: Policy review
+\item \textbf{Discussion:} Policy implications
+\item \textbf{Assignment:} Policy brief due
+\end{itemize}
+
+\subsection{Week 12: Topic 10 -- Global Perspectives (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Read Chapter 10
+\item Group presentations: Global case studies
+\item \textbf{Discussion:} International perspectives
+\item \textbf{Assignment:} Global analysis due
+\end{itemize}
+
+\subsection{Week 13: Topic 11 -- Future Directions (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Read Chapter 11
+\item Lecture: Emerging trends
+\item \textbf{Discussion:} The future of the field
+\item \textbf{Assignment:} Future trends essay due
+\end{itemize}
+
+\subsection*{Thanksgiving Break (No Class)}
+\textbf{No class meetings or assignments this week. Enjoy your break!}
+
+\subsection{Week 14: Capstone Projects and Course Wrap-Up (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Capstone project presentations
+\item Course review and feedback
+\item \textbf{Discussion:} Course reflections
+\item \textbf{Assignment:} Capstone project due
+\end{itemize}
+
+\subsection{Week 15: Final Exam Preparation (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Final exam review session
+\item \textbf{Discussion:} Final questions and clarifications
+\item \textbf{Assignment:} Final exam study guide due
+\end{itemize}
+
+\subsection{Week 16: Final Exams (Dates)}
+\textbf{Module Information}
+\begin{itemize}
+\item Final exam period
+\item \textbf{Assignment:} Final exam due
+\end{itemize}
 
 \section{University Resources and Policies}
 
