--- a/CRJU_POSC 320 Intro PA/2025 Summer/CRJU-POSC_320.tex
+++ b/CRJU_POSC 320 Intro PA/2025 Summer/CRJU-POSC_320.tex
@@ -122,10 +122,10 @@ This course satisfies General Education Explorations in Social Sciences subarea 
 \subsection{General Education Student Learning Goals}
 Students will:
 \begin{enumerate}
-\item Examine social science problems in greater depth across cultural, historical, and geographical contexts
-\item Analyze and evaluate social science concepts applied to historical, contemporary, and future problems
-\item Critically evaluate constructs of cultural differentiation and their societal effects
-\item Apply social science theories to address community problems from local to global scales
+\item Examine problems, issues, and themes in the social sciences in greater depth; in a variety of cultural, historical, and geographical contexts; and from different disciplinary and interdisciplinary perspectives.
+\item Analyze and critically evaluate the application of social science concepts and theories to particular historical, contemporary, and future problems or themes, such as economic and environmental sustainability, globalization, poverty, and social justice.
+\item Analyze and critically evaluate constructs of cultural differentiation, including ethnicity, gender, race, class, and sexual orientation, and their effects on the individual and society.
+\item Apply theories and concepts from the social sciences to address historical, contemporary, and future problems confronting communities at different geographical scales, from local to global.
 \end{enumerate}
 
 \section{Technical Requirements and Support}
@@ -242,7 +242,8 @@ All submissions must demonstrate:
 \item Original analysis and critical thinking
 \end{itemize}
 
-Assignments will be checked using plagiarism and AI detection software.
+\subsection{Writing Support Resources}
+Assignments will be checked using plagiarism detection software. Additional resources for writing support are available through the university's \href{https://www.fullerton.edu/writingcenter/}{Writing Center}. Students are encouraged to utilize these resources to improve their writing skills. Course-specific writing resources will also be provided on Canvas and at \href{https://courses.dadams.io/POSC320/posc320_async_handouts.html}{CRJU/POSC 320 Handouts}.
 
 \section{Course Structure and Delivery}
 
